# Caju-Dashboard-v3

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.Docker.md  README.md  data_import.sh  deploy.sh  docker-compose.yml  entrypoint.sh  git-ci.yml  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
apps/authentication/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_remorganization_country_id_and_more.py  0003_remuser_sended_request.py  0004_alter_remuser_email.py  0005_remove_remuser_email_remrole_organization_and_more.py  0006_alter_remrole_role_name.py  0007_remove_remorganization_country_id_and_more.py  0008_remuseraccessrequest_comment.py
apps/dashboard/: admin.py  consumers.py  custom_layer_control.py  drone_views.py  earthengine.py  extra_views.py  forms.py  map_views.py  models.py  routing.py  tasks.py  urls.py  utils.py  views.py
apps/dashboard/layers_builders/: benin_commune.py  (+16 more)
cajulab_remote_sensing_dashboard/: asgi.py  celery.py  maintenance.py  routers.py  settings.py  urls.py
config/backup/: backup_config_files.sh  codebase_backup_script.sh  db_backup.sh
config/gunicorn/: prod.py  restart_gunicorn.py
config/maintenance/: toggle_maintenance.sh
config/mysql/: init.sql
config/nginx/: nginx.conf
scripts/: separate_countries.py
scripts/data_compute_scripts/: build_satellite_prediction_computed_data.py  nursery_location_recommandations.py  tree_spacing_recommandations.py
scripts/help_scripts/: alteia_geotiff_to_googledrive.py  alteia_trees_data.py  dowload_alteia_geotiff.py  layers_datas_computation.py
scripts/setup_scripts/: add_contries_datasets.py  add_countries.py  add_organization_and_role.py  countries_with_coord.xlsx  utils.py
(+82 files in other folders)
