[project]
name = "caju-dashboard-v3"
version = "0.1.0"
description = "TechnoServe Caju Dashboard"
authors = [
    {name = "TechnoServe Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core Django dependencies
    "django==4.0.5",
    "django-allauth==0.51.0",
    "django-heroku==0.3.1",
    "django-webpack-loader==3.2.0",
    "django-phonenumber-field[phonenumbers]==7.1.0",
    # Database and data processing
    "pymysql==1.0.2",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "xlwt==1.3.0",
    # Geospatial
    "folium==0.14.0",
    "geojson==2.5.0",
    "shapely==2.0.6",
    "area==1.1.1",
    # Background tasks and messaging
    "celery>=5.3.0",
    "django-celery-beat>=2.5.0",
    "channels[daphne]==4.0.0",
    "channels-rabbitmq==4.0.1",
    "pika==1.3.2",
    "aio-pika==9.5.5",
    # Utilities
    "python-dotenv==0.20.0",
    "tomli==2.0.1",
    "typing-extensions==4.2.0",
    "unidecode==1.3.4",
    "babel==2.17.0",
    "phonenumbers==8.13.14",
    # Development tools
    "black==22.3.0",
    "autopep8==1.6.0",
    "djlint==1.36.4",
    "pipdeptree==2.8.0",
    # Server
    "gunicorn==23.0.0",
    # Data processing and ML
    "joblib==1.3.2",
    "dill==0.3.7",
    "fuzzywuzzy==0.18.0",
    # "python-levenshtein==0.21.0",  # Requires C++ compilation, install manually if needed
    # Remote sensing and external services
    "earthengine-api==0.1.312",
    "alteia==2.2.0",
    "sshtunnel==0.4.0",
    # Scheduling
    "apscheduler==3.9.1",
    
    # Additional packages (may require system dependencies on some platforms)
    "mysqlclient==2.2.6",
    "reportlab>=4.4.4",
    "weasyprint>=66.0",
    "jellyfish>=1.2.0",
    "geopandas>=1.0.1",
]

[project.optional-dependencies]
dev = []
